--- a/docs/tex/2-przeglad-literatury.tex
+++ b/docs/tex/2-przeglad-literatury.tex
@@ -7,6 +7,10 @@ Podejście Infrastructure as Code polega na zarządzaniu infrastrukturą IT popr
 
 Aktualne badania integrujące LLM z narzędziami chmurowymi pokazują obiecujące rezultaty, choć są to dopiero początki. Lanciano i in. (2023) zaproponowali wyspecjalizowany model analizujący pliki wdrożeniowe Kubernetes, aby wspomóc mniej doświadczonych użytkowników w projektowaniu konfiguracji i zapewnieniu ich jakości \cite{lanciano_analyzing_2023}. Z kolei Xu i in. (2023) wprowadzili benchmark CloudEval-YAML do oceny zdolności LLM w generowaniu konfiguracji aplikacji cloud-native (w formacie YAML), udostępniając zestaw testów jednostkowych do weryfikacji poprawności wygenerowanych manifestów \cite{ueno_migrating_2024}. Inni badacze sugerują zastosowanie LLM również do automatycznego monitorowania i utrzymania systemów – np. Malul i in. (2024) zaproponowali pipeline wykorzystujący LLM do detekcji anomalii i autoremediacji w środowisku Kubernetes, w celu zwiększenia stabilności systemu \cite{malul_genkubesec_2024}. Podejścia te często bazują na trenowaniu dedykowanych modeli językowych dopasowanych do domeny konfiguracji (np. z użyciem specjalistycznych korpusów danych). Alternatywą dla kosztownego trenowania od podstaw jest wykorzystanie istniejących, ogólnych modeli (GPT-3.5, GPT-4, Llama2 itp.) i dostrajanie ich za pomocą odpowiednich promptów \cite{kratzke_dont_2024}. Nasza praca wpisuje się w ten nurt – badamy, jak standardowe modele językowe mogą być wykorzystane (bez dodatkowego trenowania) do generowania plików Dockerfile i manifestów Kubernetes zgodnych z wymaganiami DevOps, poprzez odpowiednie techniki inżynierii promptów.
 
+Ważnym kierunkiem rozwoju są również benchmarki oceny jakości konfiguracji IaC generowanych przez modele językowe. Kon i in. zaprezentowali benchmark IaC-Eval, który służy do systematycznej oceny jakości konfiguracji dla usług chmurowych AWS \cite{kon_iac-eval_nodate}. Narzędzie to umożliwia bardziej obiektywną ocenę możliwości modeli językowych w kontekście generowania poprawnych, zgodnych z intencją użytkownika konfiguracji.
+
+Pujar i in. (2023) zaproponowali natomiast wykorzystanie LLM do generowania konfiguracji IT w języku Ansible YAML, opracowując narzędzie Ansible Wisdom. Ich praca pokazuje, że techniki prompt engineering można z powodzeniem zastosować również do innych języków deklaratywnych, nie tylko Dockerfile czy manifestów Kubernetes \cite{pujar_invited_2023}.
+
 % TODO usunac?
 Poniżej omówiono najważniejsze prace dotyczące wykorzystania LLM do generowania konfiguracji IaC, ze szczególnym naciskiem na praktyczne narzędzia i systemy oraz badania eksperymentalne. Przedstawiono zarówno korzyści automatyzacji (przyspieszenie pracy, odciążenie ekspertów, poprawa produktywności), jak i wyzwania (błędy i halucynacje modeli, aspekty bezpieczeństwa, zgodność z intencjami użytkownika), jakie zidentyfikowano w literaturze \cite{malul_genkubesec_2024, kratzke_dont_2024}.
 %
@@ -117,6 +121,16 @@ Przykładowo, jeśli w manifeście użyto domyślnej przestrzeni nazw (co jest u
 
 Istotnym elementem wdrożeniowym GenKubeSec jest to, że działa on w oparciu o lokalnie uruchomiony model LLM, a nie poprzez zapytania do zewnętrznego API modelu. Dzięki temu rozwiązanie minimalizuje ryzyko wycieku danych wrażliwych – pliki konfiguracyjne (które mogą zawierać np. informacje o architekturze systemu, nazwy usług, a nawet niektóre dane dostępowe) nie są nigdzie wysyłane, co mogłoby stwarzać zagrożenie bezpieczeństwa lub prywatności. Twórcy podkreślają tę zaletę, zauważając że wiele firm obawia się korzystać z chmurowych API LLM właśnie z uwagi na konieczność przesyłania swojej konfiguracji na zewnątrz. GenKubeSec pokazuje, że możliwe jest skuteczne połączenie technik uczenia maszynowego z praktycznymi wymaganiami bezpieczeństwa w środowisku korporacyjnym \cite{malul_genkubesec_2024}.
 
+\subsection{Bezpieczeństwo zastosowań LLM w IaC}
+
+Bezpieczeństwo jest jednym z kluczowych aspektów przy wdrażaniu dużych modeli językowych do praktyk DevOps i Infrastructure as Code. W literaturze wskazuje się szereg zagrożeń, które mogą pojawić się zarówno po stronie jakości generowanego kodu, jak i podatności samych aplikacji wykorzystujących LLM.
+
+Fu i in. (2025) przeprowadzili analizę bezpieczeństwa kodu generowanego przez LLM na podstawie repozytoriów GitHub. Wykazali oni, że znaczący odsetek fragmentów kodu zawiera podatności bezpieczeństwa, w tym takie, które zostały zaklasyfikowane do listy CWE Top-25 \cite{fu_security_2025}. Wyniki te wskazują na potrzebę weryfikacji nie tylko konfiguracji infrastruktury, ale również ogólnej jakości kodu produkowanego przez LLM, który może zostać wdrożony bez uprzedniego audytu.
+
+Liu i in. (2024) z kolei zaprezentowali technikę ataku prompt injection w aplikacjach wykorzystujących LLM, wskazując na potencjalne wektory zagrożeń, które mogą zostać wykorzystane do manipulacji generowanymi wynikami \cite{liu_prompt_2024}. Jest to szczególnie istotne w kontekście aplikacji DevOps, gdzie złośliwy użytkownik mógłby wpłynąć na wygenerowaną konfigurację systemu, np. poprzez wstrzyknięcie niepożądanych instrukcji do promptu lub danych wejściowych.
+
+Opisane ryzyka podkreślają konieczność uzupełnienia procesu integracji LLM w IaC o dodatkowe mechanizmy zabezpieczające – takie jak lokalna walidacja, sandboxing, inspekcja promptów, czy użycie oddzielnych mechanizmów inspekcji i audytu konfiguracji po ich wygenerowaniu.
+
 \subsection{Wyzwania i ograniczenia}
 
 Na podstawie przeglądu literatury można stwierdzić, że zastosowanie dużych modeli językowych w dziedzinie Infrastructure as Code niesie ze sobą znaczące korzyści, ale także wiąże się z istotnymi wyzwaniami. Do głównych zalet zaliczymy:
@@ -139,8 +153,8 @@ Z drugiej strony, pojawia się szereg wyzwań i ryzyk, które należy rozważyć
 
 \subsection{Podsumowanie}
 
-Podsumowując, literatura wskazuje, że duże modele językowe posiadają już zdolności umożliwiające znaczne usprawnienie procesu tworzenia i utrzymania infrastruktury jako kodu. Udane demonstracje – takie jak automatyczne wygenerowanie działającego Dockerfile dla setek projektów, czy wygenerowanie manifestu Kubernetes pozwalającego na wdrożenie aplikacji bez ręcznej konfiguracji – dowodzą, że automatyzacja DevOps z pomocą AI jest możliwa i może przynieść realne oszczędności czasu oraz redukcję błędów.
+Podsumowując, literatura wskazuje, że duże modele językowe posiadają już zdolności umożliwiające znaczne usprawnienie procesu tworzenia i utrzymania infrastruktury jako kodu. Udane demonstracje – takie jak automatyczne wygenerowanie działającego Dockerfile dla setek projektów \cite{hu_llm-based_2025}, czy wygenerowanie manifestu Kubernetes pozwalającego na wdrożenie aplikacji bez ręcznej konfiguracji \cite{kratzke_dont_2024} – dowodzą, że automatyzacja DevOps z pomocą AI jest możliwa i może przynieść realne oszczędności czasu oraz redukcję błędów.
 
-Jednocześnie jednak żadne z rozwiązań nie jest pozbawione wad. Wyzwania związane z halucynacjami modeli, koniecznością walidacji wyników i zapewnieniem bezpieczeństwa wskazują, że rola człowieka (eksperta DevOps) wciąż pozostaje ważna jako nadzorcy i korektora działania AI. Dlatego bieżące badania kierują się ku metodom łączenia silnych stron LLM z mechanizmami kontrolnymi – np. stosowanie podejścia human-in-the-loop, rozwijanie benchmarków oceny jakości (aby móc mierzyć postępy i porównywać modele) oraz eksplorowanie technik prompt engineering, które zmniejszą skłonność modeli do popełniania typowych błędów.
+Jednocześnie jednak żadne z rozwiązań nie jest pozbawione wad. Wyzwania związane z halucynacjami modeli \cite{low_repairing_2024}, koniecznością walidacji wyników \cite{ueno_migrating_2024, kon_iac-eval_nodate} i zapewnieniem bezpieczeństwa \cite{malul_genkubesec_2024, fu_security_2025} wskazują, że rola człowieka (eksperta DevOps) wciąż pozostaje ważna jako nadzorcy i korektora działania AI. Dlatego bieżące badania kierują się ku metodom łączenia silnych stron LLM z mechanizmami kontrolnymi – np. stosowanie podejścia human-in-the-loop \cite{low_repairing_2024}, rozwijanie benchmarków oceny jakości (aby móc mierzyć postępy i porównywać modele) \cite{ueno_migrating_2024, kon_iac-eval_nodate}, eksplorowanie technik prompt engineering \cite{kratzke_dont_2024, pujar_invited_2023}, a także opracowanie metod ochrony przed atakami prompt injection \cite{liu_prompt_2024}, które zmniejszą skłonność modeli do popełniania typowych błędów lub podatności.
 
 Niniejsza praca magisterska wpisuje się w ten nurt, starając się nie tylko wykorzystać istniejące możliwości LLM do generowania konfiguracji Docker i Kubernetes, ale także zaproponować sposoby radzenia sobie z ich ograniczeniami – tak, aby wygenerowane IaC było nie tylko poprawne składniowo, ale i zgodne z intencjami użytkownika, bezpieczne oraz gotowe do zastosowania w produkcyjnych środowiskach PaaS.
