--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -271,3 +271,131 @@
 	keywords = {Computer Science - Computation and Language, Computer Science - Cryptography and Security, Computer Science - Software Engineering, Computer Science - Artificial Intelligence},
 	file = {PDF:/Users/rasztabigab/Zotero/storage/494GYLID/Liu et al. - 2024 - Prompt Injection attack against LLM-integrated Applications.pdf:application/pdf},
 }
+
+@misc{anthropic_claude,
+  title={Claude - Anthropic's Constitutional AI Language Model},
+  author={Anthropic},
+  year={2023},
+  howpublished={\\url{https://www.anthropic.com/index/claude}},
+  note={Accessed: 2024-04-22}
+}
+
+
+@misc{zhao_survey_2025,
+	title = {A {Survey} of {Large} {Language} {Models}},
+	url = {http://arxiv.org/abs/2303.18223},
+	doi = {10.48550/arXiv.2303.18223},
+	abstract = {Ever since the Turing Test was proposed in the 1950s, humans have explored the mastering of language intelligence by machine. Language is essentially a complex, intricate system of human expressions governed by grammatical rules. It poses a significant challenge to develop capable artificial intelligence (AI) algorithms for comprehending and grasping a language. As a major approach, language modeling has been widely studied for language understanding and generation in the past two decades, evolving from statistical language models to neural language models. Recently, pre-trained language models (PLMs) have been proposed by pretraining Transformer models over large-scale corpora, showing strong capabilities in solving various natural language processing (NLP) tasks. Since the researchers have found that model scaling can lead to an improved model capacity, they further investigate the scaling effect by increasing the parameter scale to an even larger size. Interestingly, when the parameter scale exceeds a certain level, these enlarged language models not only achieve a significant performance improvement, but also exhibit some special abilities (e.g., incontext learning) that are not present in small-scale language models (e.g., BERT). To discriminate the language models in different parameter scales, the research community has coined the term large language models (LLM) for the PLMs of significant size (e.g., containing tens or hundreds of billions of parameters). Recently, the research on LLMs has been largely advanced by both academia and industry, and a remarkable progress is the launch of ChatGPT (a powerful AI chatbot developed based on LLMs), which has attracted widespread attention from society. The technical evolution of LLMs has been making an important impact on the entire AI community, which would revolutionize the way how we develop and use AI algorithms. Considering this rapid technical progress, in this survey, we review the recent advances of LLMs by introducing the background, key findings, and mainstream techniques. In particular, we focus on four major aspects of LLMs, namely pre-training, adaptation tuning, utilization, and capacity evaluation. Furthermore, we also summarize the available resources for developing LLMs and discuss the remaining issues for future directions. This survey provides an up-to-date review of the literature on LLMs, which can be a useful resource for both researchers and engineers.},
+	language = {en},
+	urldate = {2025-04-22},
+	publisher = {arXiv},
+	author = {Zhao, Wayne Xin and Zhou, Kun and Li, Junyi and Tang, Tianyi and Wang, Xiaolei and Hou, Yupeng and Min, Yingqian and Zhang, Beichen and Zhang, Junjie and Dong, Zican and Du, Yifan and Yang, Chen and Chen, Yushuo and Chen, Zhipeng and Jiang, Jinhao and Ren, Ruiyang and Li, Yifan and Tang, Xinyu and Liu, Zikang and Liu, Peiyu and Nie, Jian-Yun and Wen, Ji-Rong},
+	month = mar,
+	year = {2025},
+	note = {arXiv:2303.18223 [cs]},
+	keywords = {Computer Science - Artificial Intelligence, Computer Science - Computation and Language},
+	file = {PDF:/Users/rasztabigab/Zotero/storage/3M8LRM2V/Zhao et al. - 2025 - A Survey of Large Language Models.pdf:application/pdf},
+}
+
+@misc{almazrouei_falcon_2023,
+	title = {The {Falcon} {Series} of {Open} {Language} {Models}},
+	url = {http://arxiv.org/abs/2311.16867},
+	doi = {10.48550/arXiv.2311.16867},
+	abstract = {We introduce the Falcon series: 7B, 40B, and 180B parameters causal decoderonly models trained on a diverse high-quality corpora predominantly assembled from web data. The largest model, Falcon-180B, has been trained on over 3.5 trillion tokens of text–the largest openly documented pretraining run. Falcon-180B significantly outperforms models such as PaLM or Chinchilla, and improves upon concurrently developed models such as LLaMA 2 or Inflection-1. It nears the performance of PaLM-2-Large at a reduced pretraining and inference cost, making it, to our knowledge, one of the three best language models in the world along with GPT-4 and PaLM-2-Large. We report detailed evaluations, as well as a deep dive into the methods and custom tooling employed to pretrain Falcon. Notably, we report on our custom distributed training codebase, allowing us to efficiently pretrain these models on up to 4,096 A100s on cloud AWS infrastructure with limited interconnect. We release a 600B tokens extract of our web dataset, as well as the Falcon-7/40/180B models under a permissive license to foster open-science and accelerate the development of an open ecosystem of large language models.},
+	language = {en},
+	urldate = {2025-04-22},
+	publisher = {arXiv},
+	author = {Almazrouei, Ebtesam and Alobeidli, Hamza and Alshamsi, Abdulaziz and Cappelli, Alessandro and Cojocaru, Ruxandra and Debbah, Mérouane and Goffinet, Étienne and Hesslow, Daniel and Launay, Julien and Malartic, Quentin and Mazzotta, Daniele and Noune, Badreddine and Pannier, Baptiste and Penedo, Guilherme},
+	month = nov,
+	year = {2023},
+	note = {arXiv:2311.16867 [cs]},
+	keywords = {Computer Science - Artificial Intelligence, Computer Science - Computation and Language},
+	file = {PDF:/Users/rasztabigab/Zotero/storage/2BFPXKAF/Almazrouei et al. - 2023 - The Falcon Series of Open Language Models.pdf:application/pdf},
+}
+
+@misc{touvron_llama_2023,
+	title = {{LLaMA}: {Open} and {Efficient} {Foundation} {Language} {Models}},
+	shorttitle = {{LLaMA}},
+	url = {http://arxiv.org/abs/2302.13971},
+	doi = {10.48550/arXiv.2302.13971},
+	abstract = {We introduce LLaMA, a collection of foundation language models ranging from 7B to 65B parameters. We train our models on trillions of tokens, and show that it is possible to train state-of-the-art models using publicly available datasets exclusively, without resorting to proprietary and inaccessible datasets. In particular, LLaMA-13B outperforms GPT-3 (175B) on most benchmarks, and LLaMA65B is competitive with the best models, Chinchilla-70B and PaLM-540B. We release all our models to the research community1.},
+	language = {en},
+	urldate = {2025-04-22},
+	publisher = {arXiv},
+	author = {Touvron, Hugo and Lavril, Thibaut and Izacard, Gautier and Martinet, Xavier and Lachaux, Marie-Anne and Lacroix, Timothée and Rozière, Baptiste and Goyal, Naman and Hambro, Eric and Azhar, Faisal and Rodriguez, Aurelien and Joulin, Armand and Grave, Edouard and Lample, Guillaume},
+	month = feb,
+	year = {2023},
+	note = {arXiv:2302.13971 [cs]},
+	keywords = {Computer Science - Computation and Language},
+	file = {PDF:/Users/rasztabigab/Zotero/storage/V8BKV8XC/Touvron et al. - 2023 - LLaMA Open and Efficient Foundation Language Models.pdf:application/pdf},
+}
+
+@misc{brown_language_2020,
+	title = {Language {Models} are {Few}-{Shot} {Learners}},
+	url = {http://arxiv.org/abs/2005.14165},
+	doi = {10.48550/arXiv.2005.14165},
+	abstract = {Recent work has demonstrated substantial gains on many NLP tasks and benchmarks by pre-training on a large corpus of text followed by ﬁne-tuning on a speciﬁc task. While typically task-agnostic in architecture, this method still requires task-speciﬁc ﬁne-tuning datasets of thousands or tens of thousands of examples. By contrast, humans can generally perform a new language task from only a few examples or from simple instructions – something which current NLP systems still largely struggle to do. Here we show that scaling up language models greatly improves task-agnostic, few-shot performance, sometimes even reaching competitiveness with prior state-of-the-art ﬁnetuning approaches. Speciﬁcally, we train GPT-3, an autoregressive language model with 175 billion parameters, 10x more than any previous non-sparse language model, and test its performance in the few-shot setting. For all tasks, GPT-3 is applied without any gradient updates or ﬁne-tuning, with tasks and few-shot demonstrations speciﬁed purely via text interaction with the model. GPT-3 achieves strong performance on many NLP datasets, including translation, question-answering, and cloze tasks, as well as several tasks that require on-the-ﬂy reasoning or domain adaptation, such as unscrambling words, using a novel word in a sentence, or performing 3-digit arithmetic. At the same time, we also identify some datasets where GPT-3’s few-shot learning still struggles, as well as some datasets where GPT-3 faces methodological issues related to training on large web corpora. Finally, we ﬁnd that GPT-3 can generate samples of news articles which human evaluators have difﬁculty distinguishing from articles written by humans. We discuss broader societal impacts of this ﬁnding and of GPT-3 in general.},
+	language = {en},
+	urldate = {2025-04-22},
+	publisher = {arXiv},
+	author = {Brown, Tom B. and Mann, Benjamin and Ryder, Nick and Subbiah, Melanie and Kaplan, Jared and Dhariwal, Prafulla and Neelakantan, Arvind and Shyam, Pranav and Sastry, Girish and Askell, Amanda and Agarwal, Sandhini and Herbert-Voss, Ariel and Krueger, Gretchen and Henighan, Tom and Child, Rewon and Ramesh, Aditya and Ziegler, Daniel M. and Wu, Jeffrey and Winter, Clemens and Hesse, Christopher and Chen, Mark and Sigler, Eric and Litwin, Mateusz and Gray, Scott and Chess, Benjamin and Clark, Jack and Berner, Christopher and McCandlish, Sam and Radford, Alec and Sutskever, Ilya and Amodei, Dario},
+	month = jul,
+	year = {2020},
+	note = {arXiv:2005.14165 [cs]},
+	keywords = {Computer Science - Computation and Language},
+	file = {PDF:/Users/rasztabigab/Zotero/storage/L326VAMD/Brown et al. - 2020 - Language Models are Few-Shot Learners.pdf:application/pdf},
+}
+
+
+@article{burns_borg_2016,
+	title = {Borg, {Omega}, and {Kubernetes}},
+	volume = {59},
+	issn = {0001-0782, 1557-7317},
+	url = {https://dl.acm.org/doi/10.1145/2890784},
+	doi = {10.1145/2890784},
+	abstract = {Lessons learned from three container-management systems over a decade.},
+	language = {en},
+	number = {5},
+	urldate = {2025-04-22},
+	journal = {Communications of the ACM},
+	author = {Burns, Brendan and Grant, Brian and Oppenheimer, David and Brewer, Eric and Wilkes, John},
+	month = apr,
+	year = {2016},
+	pages = {50--57},
+	file = {PDF:/Users/rasztabigab/Zotero/storage/8Z68REW6/Burns et al. - 2016 - Borg, Omega, and Kubernetes.pdf:application/pdf},
+}
+
+@article{merkel_docker_nodate,
+	title = {Docker: {Lightweight} {Linux} {Containers} for {Consistent} {Development} and {Deployment}},
+	abstract = {Take on “dependency hell” with Docker containers, the lightweight and nimble cousin of VMs. Learn how Docker makes applications portable and isolated by packaging them in containers based on LXC technology.},
+	language = {en},
+	author = {Merkel, Dirk},
+	file = {PDF:/Users/rasztabigab/Zotero/storage/EVINSGHH/Merkel - Docker Lightweight Linux Containers for Consistent Development and Deployment.pdf:application/pdf},
+}
+
+
+@article{liu_pre-train_2023,
+	title = {Pre-train, {Prompt}, and {Predict}: {A} {Systematic} {Survey} of {Prompting} {Methods} in {Natural} {Language} {Processing}},
+	volume = {55},
+	issn = {0360-0300, 1557-7341},
+	shorttitle = {Pre-train, {Prompt}, and {Predict}},
+	url = {https://dl.acm.org/doi/10.1145/3560815},
+	doi = {10.1145/3560815},
+	language = {en},
+	number = {9},
+	urldate = {2025-04-22},
+	journal = {ACM Computing Surveys},
+	author = {Liu, Pengfei and Yuan, Weizhe and Fu, Jinlan and Jiang, Zhengbao and Hayashi, Hiroaki and Neubig, Graham},
+	month = sep,
+	year = {2023},
+	pages = {1--35},
+	file = {PDF:/Users/rasztabigab/Zotero/storage/C6BGEL8N/Liu et al. - 2023 - Pre-train, Prompt, and Predict A Systematic Survey of Prompting Methods in Natural Language Process.pdf:application/pdf},
+}
+
+@article{pahl_infrastructure_nodate,
+	title = {Infrastructure as {Code} – {Technology} {Review} and {Research} {Challenges}},
+	abstract = {The quality of software management in infrastructure operations for application software is important as automation in software operations continues to grow. Infrastructure as Code (IaC) refers to a systematic, technology-supported approach to manage deployment infrastructure for software applications. Sample contexts are general software automation, but also cloud and edge and various software-defined networking applications. DevOps (development and operations) practices, which are already applied in the Infrastructure as Code (IaC) context, need to be extended to cover the whole IaC life cycle from code generation to dynamic, automated control. The ultimate objective would range from IaC generation to full self-adaptation of IaC code in an automated setting. We review available IaC technologies based on a comprehensive comparison framework to capture the state-of-the-art. We also introduce an IaC-specific DevOps process. This serves as a basis to identify open research challenges. A discussion of defect categories is at the centre of this process.},
+	language = {en},
+	author = {Pahl, Claus and Gunduz, Niyazi Gokberk and Sezen, Ovgum Can and Ghamgosar, Ali and Ioini, Nabil El},
+	file = {PDF:/Users/rasztabigab/Zotero/storage/JCXHY7J2/Pahl et al. - Infrastructure as Code – Technology Review and Research Challenges.pdf:application/pdf},
+}
